# vectorizer

./: .codespellrc  .cursorrules  .dockerignore  .env.example  .env.hub  .gitignore  .mcp.json  .rulebook  0.31  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARACAO_CUDA_METAL.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.artifacts  Dockerfile.dev  Dockerfile.test  GPU_MEMORY_OPTIMIZATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_TASKS.md  INTELLIGENT_SEARCH_BRANCH_README.md  LICENSE  MCP_TOOLS_TEST_RESULTS.md  MULTI_GPU_PROJECT.md  PULL_REQUEST_INSTRUCTIONS.md  README.md  RELEASES.md  RELEASING.md  ROADMAP.md  SECURITY.md  STATUS_GPU.md  TECHNICAL_DOCUMENTATION_INDEX.md  TECHNICAL_IMPLEMENTATION.md  TEST_PAYLOAD_FIX.md  TEST_REPORT_MCP_MIGRATION.md  (+56 more)
client-sdks/rust/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  run_tests.rs  test_endpoints.sh  test_sdk.sh
client-sdks/rust/examples/: basic_example.rs  comprehensive_test.rs  test_working.rs  umicp_usage.rs
client-sdks/rust/src/: client.rs  error.rs  http_transport.rs  lib.rs  models.rs  transport.rs  umicp_transport.rs  utils.rs
client-sdks/rust/tests/: client_integration_tests.rs  discovery_tests.rs  error_tests.rs  file_operations_tests.rs  http_client_tests.rs  integration_tests.rs  intelligent_search_tests.rs  models_tests.rs  umicp_tests.rs  validation_tests.rs
crates/vectorizer/: Cargo.toml  build.rs
crates/vectorizer-cli/: Cargo.toml
crates/vectorizer-cli/src/: lib.rs
crates/vectorizer-core/: Cargo.toml
crates/vectorizer-core/src/: lib.rs  metrics_sink.rs  paths.rs
crates/vectorizer-protocol/: Cargo.toml  build.rs
crates/vectorizer-protocol/proto/: cluster.proto  vectorizer.proto
crates/vectorizer-protocol/src/: lib.rs
crates/vectorizer-server/: Cargo.toml
crates/vectorizer-server/src/: lib.rs
crates/vectorizer-server/tests/: api_docs_spec.rs  backpressure_429.rs  capability_registry_route_reachability.rs  csrf_bearer_exemption.rs  grpc_advanced.rs  grpc_comprehensive.rs  grpc_integration.rs  grpc_live.rs  grpc_s2s.rs  read_path_under_write_saturation.rs  rest_auth_enforcement.rs  rest_batch_insert.rs  rest_batch_ops.rs  rest_discovery_admin_handlers.rs  rest_embedding_provider.rs  rest_encryption.rs  rest_file_upload.rs  rest_force_save.rs  rest_lifecycle_handlers.rs  rest_move_vectors.rs  rest_qdrant_compat.rs  rest_vector_search.rs
crates/vectorizer/src/: gpu_adapter.rs  grpc_conversions.rs  guardrails.rs  hybrid_search.rs  lib.rs  tests.rs
crates/vectorizer/tests/: bm25_vocab_persistence.rs  dependabot_coverage.rs  docker_vex.rs  file_size_budget.rs  grpc_advanced.rs  grpc_integration.rs  ignore_count_gate.rs  insert_search_concurrency.rs  rename_collection_persists.rs  test_new_features.rs
sdks/langflow/: README.md  pyproject.toml
sdks/langflow/vectorizer_langflow/: __init__.py  loader.py  retriever.py  vectorstore.py
sdks/python/: .gitignore  .pypirc  CHANGELOG.md  README.md  __init__.py  build.ps1  build.sh  cli.py  client.py  examples.py  models.py  publish.sh  pyproject.toml  requirements.txt  test_master_replica.py
sdks/python/examples/: encryption_example.py  (+1 more)
sdks/rust/: CHANGELOG.md  Cargo.toml  README.md  run_tests.rs  test_sdk.sh
tests/: Cargo.toml  README.md  README_GRPC_S2S.md  TRANSMUTATION_TESTS_README.md  all_tests.rs  api_comprehensive_tests.rs  api_performance_tests.rs  api_workflow_test.rs  ci_tests.rs  compression_integration_test.rs  concurrent_test.rs  docker_virtual_paths_test.rs  file_size_budget.rs  grpc_advanced.rs  grpc_comprehensive.rs  grpc_integration.rs  grpc_s2s.rs  grpc_tests.rs  hive_gpu_integration.rs  integration_binary_quantization.rs  integration_hybrid_search.rs  integration_payload_index.rs  integration_query_cache.rs  integration_sparse_vector.rs  integration_tests.rs  mcp_handlers_integration.rs  mcp_integration_test.rs  mcp_tests.rs  metal_gpu_validation.rs  multi_collection_test.rs  qdrant_api_integration.rs  qdrant_filter_integration.rs  qdrant_migration_test.rs  replication_api_integration.rs  replication_comprehensive.rs  replication_failover.rs  replication_handlers_test.rs  replication_integration.rs  rest_api_integration.rs  storage_integration.rs  (+12 more)
tests/api/: mod.rs  parity.rs
tests/bend/: integration_test.rs
tests/cluster/: distributed_resilience.rs  memory_limits.rs  mod.rs
tests/config/: layered_real_files.rs
tests/core/: collection_cleanup.rs  mod.rs  persistence.rs  quantization.rs  simd.rs  storage.rs  storage_integration.rs  wal.rs  wal_comprehensive.rs  wal_crash_recovery.rs  wal_vector_store.rs
tests/gpu/: hive_gpu.rs  metal.rs  mod.rs
tests/grpc/: README.md  collections.rs  helpers.rs  mod.rs  qdrant.rs  vectors.rs
tests/helpers/: mod.rs
tests/hub/: auth_tests.rs  backup_tests.rs  failover_tests.rs  isolation_tests.rs  middleware_tests.rs  migration_tests.rs  mock_hub.rs  mod.rs  quota_tests.rs  usage_tests.rs
tests/infrastructure/: bcrypt_compat.rs  docker.rs  handler_robustness.rs  jwt_secret_boot.rs  logging.rs  mod.rs  tier1_marker_gate.rs
tests/integration/: binary_quantization.rs  cluster.rs  cluster_e2e.rs  cluster_failures.rs  cluster_fault_tolerance.rs  cluster_ha.rs  cluster_hybrid_search.rs  cluster_integration.rs  cluster_multitenant.rs  cluster_performance.rs  cluster_scale.rs  distributed_search.rs  distributed_sharding.rs  graph.rs  hub_logging.rs  hybrid_search.rs  mod.rs  multi_tenancy.rs  multi_tenancy_comprehensive.rs  new_implementations.rs  payload_index.rs  qdrant_api.rs  query_cache.rs  raft.rs  raft_comprehensive.rs  sharding.rs  sharding_comprehensive.rs  sharding_validation.rs  sharding_validation.rs.bak  sparse_vector.rs  tls_security.rs
tests/performance/: concurrent.rs  mod.rs  multi_collection.rs  multi_tenant_load.rs
tests/quantization/: mod.rs
tests/replication/: comprehensive.rs  failover.rs  handlers.rs  integration.rs  integration_basic.rs  mod.rs  qdrant.rs  qdrant_api.rs  qdrant_migration.rs
tests/simd/: mod.rs  new_ops.rs  scalar_oracle.rs
tests/workflow/: api_workflow.rs  mod.rs
(+3900 files in other folders)
