[package]
name = "vectorizer-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
vectorizer = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["full"] }
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
rand = "0.8"
futures = "0.3"
env_logger = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
