[package]
name = "vectorizer-rust-sdk"
version = "0.3.4"
edition = "2024"
authors = ["HiveLLM Contributors"]
description = "SDK Rust para Hive Vectorizer"
license = "MIT"
repository = "https://github.com/hivellm/vectorizer.git"
keywords = ["vector-database", "semantic-search", "embeddings", "rust"]
categories = ["database", "science"]

[dependencies]
# Dependencies matching vectorizer versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0", features = ["backtrace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockito = "1.0"
wiremock = "0.6"

[features]
default = []