[package]
name = "vectorizer-core"
version = "3.0.0"
edition = "2024"
authors = ["HiveLLM Contributors"]
description = "Core primitives for Vectorizer: error type, binary codec, quantization, parallel + compression helpers."
license = "Apache-2.0"
repository = "https://github.com/hivellm/vectorizer"
keywords = ["vector-database", "embeddings", "quantization"]
categories = ["database", "data-structures"]

[dependencies]
# error/ — shared VectorizerError + ErrorKind
thiserror = { version = "2.0", default-features = false }
anyhow = { version = "1.0", features = ["backtrace"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9", default-features = false }

# error/ — UmicpError variant (always-on; gated CandleError below)
umicp-core = { version = "0.2.3", features = ["http2", "websocket"] }

# codec.rs — bincode wrapper (legacy v1 API on top of v3 engine)
bincode = { version = "2.0", features = ["serde"] }

# compression/, quantization/storage.rs — lz4 + zstd wrappers
lz4_flex = "0.12.0"
zstd = "0.13"

# paths/ — OS user-data directory resolution (XDG on Linux, Application
# Support on macOS, AppData on Windows). Centralises the "where does
# vectorizer write its data and logs" decision so the answer is the
# same across the binary, the auth-persistence layer, and the
# storage layer.
dirs = "5.0"

# parallel/, quantization/ — thread pools + parallel helpers
rayon = "1.10"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.20"
num_cpus = "1.16"
fastrand = "2.3"
tracing = { version = "0.1", default-features = false }

# error/mapping.rs — wire-protocol error mappings (axum HTTP, tonic
# gRPC, rmcp MCP). They live in core because they're the canonical
# `From<&VectorizerError> for <wire-error>` impls and the orphan
# rule forces them to sit alongside `VectorizerError`.
axum = { version = "0.8.7", default-features = false }
tonic = { version = "0.14", features = [] }
rmcp = { version = "0.10", features = ["server"] }

# Optional: gates the `CandleError` enum variant in error/
candle-core = { version = "0.10.2", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
# Activated by the umbrella crate when `candle-models` is on; pulls
# the `CandleError` `#[from] candle_core::Error` variant into
# `VectorizerError`.
candle-models = ["dep:candle-core"]

# SIMD dispatch master flag. Each per-ISA opt-in is a no-op on
# targets the CPU doesn't support. Mirrors the gates the umbrella
# crate carried before sub-phase 3.
simd = []
simd-avx2 = []
simd-avx512 = []
simd-neon = []
simd-sve = []
simd-wasm = []

[lints]
workspace = true
